feat: add warning box

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         </nav>
     </header>
 
+    <div id="mobile-warning" class="mobile-warning" style="display: none;">
+        <div class="mobile-warning-content">
+            <h2>ご利用環境について</h2>
+            <p>このアプリケーションは、<br>パソコン上での操作を想定しています。</p>
+            <p>スマートフォンやタブレットからのご利用は、<br>一部機能が正常に動作しない可能性があります。</p>
+            <button onclick="document.getElementById('mobile-warning').style.display='none'">閉じる</button>
+        </div>
+    </div>
+
     <div class="main-container">
         <div class="sidebar">
             <div class="sidebar-header">
