fix: fix GitHub link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul class="nav-list">
                 <li class="nav-list-item"><a href="https://www.keio.co.jp/global/routes/" target="_blank">公式路線図</a></li>
-                <li class="nav-list-item"><a href="https://github.com/10thGrade/" target="_blank">GitHub</a></li>
+                <li class="nav-list-item"><a href="https://github.com/10thGrade/keio-original-route-map/" target="_blank">GitHub</a></li>
             </ul>
         </nav>
     </header>
